--- a/index.css
+++ b/index.css
@@ -49,7 +49,7 @@ img {
     align-items: center;
     font-size: 5em;
 
-    background-color: lightgreen;
+    background-color: #cfcf64;
 }
 
 /*페이지3 */
@@ -150,8 +150,14 @@ img {
     top:170vh;
 }
 .gd_contianer{
-    height: 200px; width: auto;
+    height: auto; width: auto;
 }
+
+.pf_img{
+    position: absolute;
+    top:120%; left: 5%;
+}
+
 #ys_typingtext {
     font-size: 2rem;
     font-weight: bold;
@@ -178,156 +184,3 @@ img {
 }
 
 
-
-
-
-/* section3 스타일 */
-
-.P5ImgContainer {
-    margin: auto;
-    height: auto;
-    display: flex;
-}
-
-#P5ImgBox1 {
-    width: 200px;
-    height: 400px;
-    border-radius: 10px;
-    margin: 10px;
-    /* infinite : 애니매이션 무한반복 */
-    animation: pong 5s infinite;
-    /* 애니메이션 딜레이시간 */
-    animation-delay: 5s;
-    position: relative;
-}
-
-#P5ImgBox2 {
-    width: 200px;
-    height: 400px;
-    border-radius: 10px;
-    margin: 10px;
-    animation: pong 5s infinite;
-    animation-delay: 4s;
-    position: relative;
-
-}
-
-#P5ImgBox3 {
-    width: 200px;
-    height: 400px;
-    border-radius: 10px;
-    margin: 10px;
-    animation: pong 5s infinite;
-    animation-delay: 3s;
-    position: relative;
-
-}
-
-#P5ImgBox4 {
-    width: 200px;
-    height: 400px;
-    border-radius: 10px;
-    margin: 10px;
-    animation: pong 5s infinite;
-    animation-delay: 2s;
-    position: relative;
-
-}
-
-#P5ImgBox5 {
-    width: 200px;
-    height: 400px;
-    border-radius: 10px;
-    margin: 10px;
-    animation: pong 5s infinite;
-    animation-delay: 1s;
-    position: relative;
-
-}
-
-/* 아래에서 위로 점점 보이게 만든 이미지 */
-
-@keyframes pong {
-    100% {
-        top: 0px;
-    }
-
-    0% {
-        top: 250px;
-        opacity: 0;
-    }
-}
-
-#gdh1 {
-    right: 55%;
-    position: relative;
-}
-
-
-
-
-/* section5 내부 스타일 */
-
-.kbox_container {
-    background-color: white;
-    width: auto;
-    height: 300px;
-    margin: 50px;
-    border: 10px;
-    border-radius: 10px 10px 10px 10px;
-    padding: 0;
-    z-index: 9999;
-    text-align: left;
-    font-size: 0.5em;
-    position: relative;
-    top: 20%;
-    left: -60%;
-    color: black;
-    line-height: 43.5px;
-    cursor: pointer;
-}
-
-
-
-#kboxa {
-    float: left;
-    position: absolute;
-    margin: 5px;
-    border-radius: 10px;
-
-}
-
-#kboxa1 {
-    float: left;
-    position: absolute;
-    top: 60px;
-    margin: 5px;
-    border-radius: 10px;
-}
-
-#kboxa2 {
-    float: left;
-    position: absolute;
-    top: 120px;
-    margin: 5px;
-    border-radius: 10px;
-
-}
-
-#kboxa3 {
-    float: left;
-    position: absolute;
-    top: 180px;
-    margin: 5px;
-    border-radius: 10px;
-
-}
-
-#kboxa4 {
-    float: left;
-    position: absolute;
-    top: 240px;
-    margin: 5px;
-    border-radius: 10px;
-
-}
