--- a/main.css
+++ b/main.css
@@ -1,204 +1,17 @@
-/* 초기화 */
 * {
     margin: 0;
     padding: 0;
 }
 
-li {
-    list-style: none;
-}
-
-body {
-    font-family: 'NanumSquare', bold;
-    margin: 0 auto;
-}
-
-a {
-    text-decoration: none;
-    color: cornsilk;
-}
-
-#pf2 {
-    border-radius: 20px 20px 20px 20px;
-    width: 300px;
-    height: 400px;
-
-}
-
-
-/*페이지 대문 */
-
-/*페이지1 */
-#section1 {
+.body {
     height: 100vh;
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 5em;
-
-    background-color: lightblue;
 }
-
-/*페이지2 */
-#section2 {
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 5em;
-
-    background-color: #cfcf64;
-}
-
-/*페이지3 */
-#section3 {
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 5em;
-
-    background-color: lightpink;
-}
-
-
-
-
-
-
-/*페이지4 */
-#section4 {
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 5em;
-    background-color: rgb(61, 207, 226);
-
-}
-
-/* 페이지5 */
-#section5 {
-    height: auto;
-    width: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 5em;
-    background-color: rgb(199, 243, 78);
-
-}
-
-
-
-
-
-@keyframes spin {
-    100% {
-        transform: rotate(360deg);
-    }
-}
-
-
-/* 메인 */
-@import url('https://fonts.googleapis.com/css?family=Poppins:700');
-
-.blob {
-    position: absolute;
-    top: 0;
-    left: 0;
-    fill: #023F92;
-    width: 50vmax;
-    z-index: 999;
-    animation: move 10s ease-in-out infinite;
-    transform-origin: 50% 50%;
-}
-
-@keyframes move {
-    0% {
-        transform: scale(1) translate(10px, -30px);
-    }
-
-    38% {
-        transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
-    }
-
-    40% {
-        transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg);
-    }
-
-    78% {
-        transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
-    }
-
-    80% {
-        transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg);
-    }
-
-    100% {
-        transform: scale(1) translate(10px, -30px);
-    }
-}
-
-/* section2 */
-.gd_button{
-    position: absolute;
-    top:170vh;
-}
-.gd_contianer{
-    height: 500px; width: 900px;
-}
-
-.pf_img{
-    top:120%; left: 5%;
-    padding: 10px;
-}
-.side_img{
-    position: relative;
-    top: 15%;
-    left: -4%;
-}
-
-#ys_typingtext {
-    font-size: 2rem;
-    font-weight: bold;
-    height: 250px;
-    text-align: center;
-    top: 50%
-}
-
-#ys_typingtext::after {
-    content: '';
-    margin-left: .6rem;
-    border-right: 2px solid #777;
-    animation: cursor .9s infinite steps(2);
-}
-
-@keyframes cursor {
-    from {
-        border-right: 2px solid #222;
-    }
-
-    to {
-        border-right: 2px solid #777;
-    }
-}
-
-/* section3 */
-/* .gd_box{
-    border: solid;
-    margin: 10px;
-} */
 
 .gd_contianer3 {
     height: 400px;
     width: 400px;
     margin: auto;
-    /* position: absolute; */
+    position: absolute;
     top: 50%;
     left: 50%;
     perspective: 1000px;
@@ -210,9 +23,9 @@ a {
 }
 
 .gd_Imgbox {
-    /* height: 250px;
+    height: 250px;
     width: 250px;
-    position: absolute; */
+    position: absolute;
     top: 50%;
     left: 50%;
     /* top: 100px; left: 100px; */
@@ -355,10 +168,4 @@ a {
 .right:hover{
     opacity: 0.5;
     transform: scale(0.8) rotate(120deg);
-}
-
-#gd_sidename{
-    /* top:120%; */
-    left:20%;
-    /* transform: rotate(270deg); */
 }
