--- a/main.css
+++ b/main.css
@@ -6,166 +6,7 @@
 .body {
     height: 100vh;
 }
-
-.gd_contianer3 {
-    height: 400px;
-    width: 400px;
-    margin: auto;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    perspective: 1000px;
-    animation: gd_spin 120s linear 0s infinite normal none;
-    transform-style: preserve-3d;
-
-    transform: translate(-50%, -50%);
-
-}
-
-.gd_Imgbox {
-    height: 250px;
-    width: 250px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    /* top: 100px; left: 100px; */
-    transform-style: preserve-3d;
-    transform: translate(-50%, -50%);
-}
-
-.gd_box {
-    height: 250px;
-    width: 250px;
-    text-align: center;
-    color: white;
-    background: none;
-    border: 2px solid black;
-    font-size: 32px;
-    box-sizing: border-box;
-    position: absolute;
-
-}
-
-.gd_button {
-    background: none;
-    border: none;
-    cursor: pointer;
-}
-
-.front {
-    width: 0px;
-    height: 0px;
-    border-bottom: calc(125px * 1.732) solid rgb(245, 158, 158);
-    border-left: 125px solid transparent;
-    border-right: 125px solid transparent;
-    border-top: 0px;
-    right: -100px;
-    transform: rotate(180deg);
-    background: none;
-    transition: transform 0.5s, opacity 0.5s;
-    /* animation: gd_scale 1s ease normal; */
-}
-
-
-
-.back {
-    width: 0px;
-    height: 0px;
-    border-bottom: calc(125px * 1.732) solid rgb(183, 206, 83);
-    border-left: 125px solid transparent;
-    border-right: 125px solid transparent;
-    border-top: 0px;
-    right: -197px;
-    top: 54px;
-    transform: rotate(240deg);
-    transition: transform 0.5s, opacity 0.5s;
-
-}
-
-.top {
-    width: 0px;
-    height: 0px;
-    border-bottom: calc(125px * 1.732) solid rgb(47, 212, 32);
-    border-left: 125px solid transparent;
-    border-right: 125px solid transparent;
-    border-top: 0px;
-    top: 166px;
-    right: -197px;
-    transform: rotate(300deg);
-    transition: transform 0.5s, opacity 0.5s;
-}
-
-.bottom {
-    width: 0px;
-    height: 0px;
-    border-bottom: calc(125px * 1.732) solid rgb(11, 100, 216);
-    border-left: 125px solid transparent;
-    border-right: 125px solid transparent;
-    border-top: 0px;
-    top: 220px;
-    right: -100px;
-    transform: rotate(0deg);
-    transition: transform 0.5s, opacity 0.5s;
-}
-
-.left {
-    width: 0px;
-    height: 0px;
-    border-bottom: calc(125px * 1.732) solid rgb(199, 29, 233);
-    border-left: 125px solid transparent;
-    border-right: 125px solid transparent;
-    border-top: 0px;
-    top: 166px;
-    right: -3px;
-    transform: rotate(60deg);
-    background: transparent;
-    transition: transform 0.5s, opacity 0.5s;
-}
-
-.right {
-    width: 0px;
-    height: 0px;
-    border-bottom: calc(125px * 1.732) solid rgb(236, 1, 12);
-    border-left: 125px solid transparent;
-    border-right: 125px solid transparent;
-    border-top: 0px;
-    top: 54px;
-    right: -3px;
-    transform: rotate(120deg);
-    transition: transform 0.5s, opacity 0.5s;
-}
-
-@keyframes gd_spin {
-
-    0% {
-        transform: rotate(0deg);
-    }
-
-    100% {
-        transform: rotate(360deg);
-    }
-}
-.front:hover{
-    opacity: 0.5;
-    transform: scale(0.8) rotate(180deg);
-}
-.back:hover{
-    opacity: 0.5;
-    transform: scale(0.8) rotate(240deg);
-}
-.top:hover{
-    opacity: 0.5;
-    transform: scale(0.8) rotate(300deg);
-}
-.bottom:hover{
-    opacity: 0.5;
-    transform: scale(0.8) rotate(0deg);
-}
-.left:hover{
-    opacity: 0.5;
-    transform: scale(0.8) rotate(60deg);
-}
-.right:hover{
-    opacity: 0.5;
-    transform: scale(0.8) rotate(120deg);
+.gd_mainContainer{
+    width: auto;
+    height: auto;
 }
