--- a/coffee.css
+++ b/coffee.css
@@ -1,6 +1,14 @@
+@font-face {
+    font-family: 'HCRDotum';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_four@1.0/HCRDotum.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 * {
     margin: 0;
     padding: 0;
+    font-family: 'HCRDotum';
+
 }
 
 body {
