--- a/profile.css
+++ b/profile.css
@@ -1,7 +1,15 @@
+@font-face {
+    font-family: 'HCRDotum';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_four@1.0/HCRDotum.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 /* 초기화 */
 * {
     margin: 0;
     padding: 0;
+    font-family: 'HCRDotum';
+
 }
 
 li {
